# Database-Updater-Cpp

./: Connection.h  Options.h  Parser.h  README.md  main.cpp
src/: CMakeLists.txt  Connection.cpp  Data.cpp  Data.h  News.h  Parser.cpp  Stock.cpp  Stock.h  UpdateDB  dependecies.txt  main.cpp
